# klc3

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.TXT  README-KLEE.md  README.md
cmake/: compile_bitcode_library.cmake  find_bitcode_compiler.cmake
cmake/modules/: FindReadline.cmake
include/klc3/: Common.h
include/klc3/Core/: Executor.h  MemoryManager.h  MemoryValue.h  State.h  StateAllocator.hpp
include/klc3/FlowAnalysis/: CoverageTracker.h  FlowGraph.h  FlowGraphBasic.h  FlowGraphVisualizer.h  LoopAnalyzer.h  SubroutineTracker.h
include/klc3/Generation/: IssueFilter.h  ReportFormatter.h  ResultGenerator.h  VariableInductor.h
include/klc3/Loader/: InputVariable.h  Loader.h
include/klc3/Searcher/: PruningSearcher.h  Searcher.h
include/klc3/Verification/: CrossChecker.h  ExecutionLimitChecker.h  Issue.h  IssuePackage.h
include/klee/Expr/: ArrayCache.h  Assignment.h  Expr.h  ExprHashMap.h
include/klee/Solver/: SolverCmdLine.h  SolverStats.h
klc3-manual/: .gitignore  README.md
klc3-manual/asserts/: report_template.md
klc3-manual/examples/: .gitignore
klc3-manual/examples/get_sign/: get_sign.asm  run_klc3.sh  symbolic_input.asm
klc3-manual/examples/get_sign/klc3-out-0/: get_sign.asm  report.md
klc3-manual/examples/get_sign/klc3-out-0/test0/: test0-symbolic_input.asm  test0.lcs
klc3-manual/examples/zjui_ece220_fa18/mp3/: extra.asm  klc3_options_.asm  run_klc3.sh  sched.asm  sched_alloc_.asm  stack_alloc_.asm
klc3-manual/examples/zjui_ece220_fa20/mp1/: assertions_.asm  mp1_preprocess.sh
klc3-manual/examples/zjui_ece220_fa20/mp2/: mem_alloc_.asm  run_klc3.sh  test_data.asm
klc3-manual/examples/zjui_ece220_fa20/mp3/: extra.asm  run_klc3.sh  sched.asm  stack_alloc_.asm
lib/: CMakeLists.txt
lib/Core/: Executor.cpp  Executor.h  StatsTracker.cpp
lib/Expr/: ArrayExprOptimizer.cpp  Assignment.cpp  AssignmentGenerator.cpp  Parser.cpp
lib/Solver/: CexCachingSolver.cpp  IndependentSolver.cpp  STPBuilder.cpp  STPSolver.cpp  Solver.cpp  SolverCmdLine.cpp  SolverStats.cpp
lib/klc3/: CMakeLists.txt  Common.cpp
lib/klc3/Core/: Executor.cpp  MemoryManager.cpp  MemoryValue.cpp  State.cpp
lib/klc3/FlowAnalysis/: CoverageTracker.cpp  FlowGraph.cpp  FlowGraphVisualizer.cpp  LoopAnalyzer.cpp  SubroutineTracker.cpp
lib/klc3/Generation/: IssueFilter.cpp  ReportFormatter.cpp  ResultGenerator.cpp  VariableInductor.cpp
lib/klc3/Loader/: Lexer.cpp  Lexer.f  Loader.cpp
lib/klc3/Searcher/: PruningSearcher.cpp  Searcher.cpp
lib/klc3/Verification/: CrossChecker.cpp  ExecutionLimitChecker.cpp  IssuePackage.cpp
test-klc3/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
test-klc3/issue_detection/: data_rw_overflow.asm  execute_data.asm  for_read_for_write.asm  halt_in_subroutine.asm  improper_ret.asm  jmp_instead_of_ret.asm  read_uninitialized_reg.asm  ret_in_main.asm  rw_instructions.asm
test-klc3/klc3_commands/: conflict_assumes.asm
test-klc3/load_constraints/: and_constraints.asm  neg_constraints.asm  no_constraints.asm  non_neg_constraints.asm  or_constraints.asm
tools/: CMakeLists.txt
tools/klc3/: CMakeLists.txt  klc3-clean-output  klc3.cpp
tools/klc3as/: CMakeLists.txt  klc3as.cpp
tools/kleaver/: main.cpp
tools/klee/: main.cpp
tools/klee-stats/: klee-stats
tools/lc3tools_release/: CHANGE_LOG  CMakeLists.txt  LICENSE  Makefile.def  README  command_guide.txt  lc3.def  lc3.f  lc3convert.f  lc3os.asm  lc3sim-tk.def  lc3sim.c  lc3sim.h  symbol.c  symbol.h
(+50 files in other folders)
